--- a/tests/.jenkins_exclude.yml
+++ b/tests/.jenkins_exclude.yml
@@ -23,7 +23,9 @@ exclude:
     FRAMEWORK: flask-0.11 # see https://github.com/pallets/flask/commit/6e46d0cd, 0.11.2 was never released
   #Tornado
   - PYTHON_VERSION: python-2.7
-    FRAMEWORK: tornado-5.1
+    FRAMEWORK: tornado-master
+  - PYTHON_VERSION: python-2.7
+    FRAMEWORK: tornado-master
   # celery
   - PYTHON_VERSION: python-2.7
     FRAMEWORK: celery-3-django-2.0
